--- a/styles/colors.module.scss
+++ b/styles/colors.module.scss
@@ -9,12 +9,14 @@ $background-secondary-color: #f5f5f5;
 // Font Colors
 $title-color: #707070;
 $paragraph-color: #747474;
+$contrastText: #ffffff;
 
 :export {
-    primaryColor: $primary-color;
-    secondaryColor: $secondary-color;
-    backgroundPrimaryColor: $background-primary-color;
-    backgroundSecondaryColor: $background-secondary-color;
-    titleColor: $title-color;
-    paragraphColor: $paragraph-color;
+  primaryColor: $primary-color;
+  secondaryColor: $secondary-color;
+  backgroundPrimaryColor: $background-primary-color;
+  backgroundSecondaryColor: $background-secondary-color;
+  titleColor: $title-color;
+  contrastText: $contrastText;
+  paragraphColor: $paragraph-color;
 }
