--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,3 +14,8 @@ a {
 * {
     box-sizing: border-box;
 }
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
