--- a/styles/colors.module.scss
+++ b/styles/colors.module.scss
@@ -1,6 +1,6 @@
 // Light Colors
-$primary-color: #00ba4f;
-$secondary-color: #6b6bff;
+$primary-color: #00A555;
+$secondary-color: #FC9719;
 
 // Light backgrounds
 $background-primary-color: #ffffff;
